--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@ body {
 </head>
 <body>
 
+.table1 {
+background: rgba(255,255,255,0.5);
+}
 
 
-# Mohsin Saeed
-_[AMA around] Information Security_
+<h2 style="color:white;"># Mohsin Saeed</h2>
+<h3 style="color:white;">_[AMA around] Information Security_</h3>
 
 
-DISTINCTIONS AND EXPERIENCES
-<table>
+<h3 style="color:white;">DISTINCTIONS AND EXPERIENCES</h3>
+
+<table class='table1'>
   <tr>
     <td><img src="patent.jpg" alt="drawing" width="800"/></td>
     <td>Co-Author USA Patent</td>
