--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ background: rgba(255,255,255,0.7);
   </tr>
   <tr>
     <td><img src="protocol.jpg" alt="drawing" width="600"/></td>
-    <td>Protocols level research</td>
-    <td>Vulnerability/CVE hunting in not just applications or gateways but in the core protocol stack</td>
+    <td>Vulnerability research and management</td>
+    <td>Vulnerability/CVE hunting in not just applications or gateways but in the core protocol stack and proactive coverage</td>
   </tr>
 </table>
 </font>
